แก้หน้า UI สำหรับเก็บข้อมูลผลิตภัณฑ์ - close #92
