# backend/docs/swagger.json
@@ -3054,7 +3054,7 @@
         "controllers.Product": {
             "type": "object",
             "properties": {
-                "genderID": {
+                "gender": {
                     "type": "integer"
                 },
                 "groupOfAge": {
@@ -3067,7 +3067,7 @@
                     "type": "string"
                 },
                 "productPaymentOfYear": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "productPrice": {
                     "type": "integer"
@@ -3218,8 +3218,8 @@
         "ent.GenderEdges": {
             "type": "object",
             "properties": {
-                "genders": {
-                    "description": "Genders holds the value of the genders edge.",
+                "genderProduct": {
+                    "description": "GenderProduct holds the value of the gender_product edge.",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ent.Product"
@@ -3252,8 +3252,8 @@
         "ent.GroupOfAgeEdges": {
             "type": "object",
             "properties": {
-                "groupageProduct": {
-                    "description": "GroupageProduct holds the value of the groupage_product edge.",
+                "groupofageProduct": {
+                    "description": "GroupofageProduct holds the value of the groupofage_product edge.",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ent.Product"
@@ -3685,7 +3685,7 @@
                 },
                 "product_payment_of_year": {
                     "description": "ProductPaymentOfYear holds the value of the \"product_payment_of_year\" field.",
-                    "type": "number"
+                    "type": "integer"
                 },
                 "product_price": {
                     "description": "ProductPrice holds the value of the \"product_price\" field.",
@@ -3700,15 +3700,20 @@
         "ent.ProductEdges": {
             "type": "object",
             "properties": {
-                "productGender": {
-                    "description": "ProductGender holds the value of the product_gender edge.",
+                "gender": {
+                    "description": "Gender holds the value of the gender edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.Gender"
                 },
-                "productGroupage": {
-                    "description": "ProductGroupage holds the value of the product_groupage edge.",
+                "groupofage": {
+                    "description": "Groupofage holds the value of the groupofage edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.GroupOfAge"
+                },
+                "officer": {
+                    "description": "Officer holds the value of the officer edge.",
+                    "type": "object",
+                    "$ref": "#/definitions/ent.Officer"
                 },
                 "productInquiry": {
                     "description": "ProductInquiry holds the value of the product_inquiry edge.",
@@ -3723,11 +3728,6 @@
                     "items": {
                         "$ref": "#/definitions/ent.Insurance"
                     }
-                },
-                "productOfficer": {
-                    "description": "ProductOfficer holds the value of the product_officer edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.Officer"
                 },
                 "productPayback": {
                     "description": "ProductPayback holds the value of the product_payback edge.",
